# rust-todo-app

./: AGENTS.md  Cargo.toml  README.md
migrations/: 001_create_todo_items.sql
src/: args.rs  config.rs  db.rs  main.rs  todo_list.rs
static/: app.js  index.html
tests/: api.rs
