[package]
name = "todo_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
dotenvy = "0.15"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "migrate"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
actix-web = "4"
actix-files = "0.6"

[dev-dependencies]
actix-rt = "2"
tempfile = "3"
